--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ android {
     buildToolsVersion "30.0.3"
 
     defaultConfig {
-        applicationId "br.edu.ifsp.scl.pdm.intent2"
+        applicationId "br.edu.ifsp.scl.pdm.Intent"
         minSdkVersion 19
         targetSdkVersion 30
         versionCode 1
@@ -26,6 +26,7 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+
     buildFeatures {
         viewBinding true
     }
